--- a/.github/workflows/cd-k8s.yml
+++ b/.github/workflows/cd-k8s.yml
@@ -38,7 +38,7 @@ jobs:
         echo "${{ secrets.KUBECONFIG }}" > kubeconfig
         export KUBECONFIG=$PWD/kubeconfig
 
-    - name: Deploy to Kubernetes
-      run: |
-        kubectl apply -f hydrify-deployment.yaml
-        kubectl apply -f hydrify-service.yaml
+    # - name: Deploy to Kubernetes
+    #   run: |
+    #     kubectl apply -f hydrify-deployment.yaml
+    #     kubectl apply -f hydrify-service.yaml
