--- a/.github/workflows/cd-k8s.yml
+++ b/.github/workflows/cd-k8s.yml
@@ -40,4 +40,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: gaura/hydrify-android:latest
+          tags: akshatgr/hydrify-android:latest
